passing reference instance